--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,8 @@ export(sbinom)
 export(schisq)
 export(sexp)
 export(sgamma)
+export(slnorm)
+export(snorm)
+export(spois)
+export(st)
+export(sunif)
